Fixed looking ahead and nowcard overlapping

--- a/docroot/sass/modules/today-forecast.sass
+++ b/docroot/sass/modules/today-forecast.sass
@@ -17,7 +17,6 @@
     letter-spacing: 0.02rem
     background-color: #257BDA
     font-size: 18px
-    margin-bottom: -10px // TODO
     a
       color: #FFF
     .deg
